<resources>
    <string name="app_name">KidsZone</string>
    <string name="facebook_app_id">355020341637129</string>
    <string name="cancel_login">Login cancelado</string>
    <string name="error_login">Ocorreu um erro</string>
    <string name="msg_perder">Perdeu</string>
    <string name="msg_ganhou">Ganhou</string>
    <string name="login">Login</string>
    <string name="mapa">Mapa</string>
    <string name="locais">Locais</string>
    <string name="lista">Lista</string>
    <string name="logout">Logout</string>
    <string name="loginlogout">Login</string>
    <string name="jogar">Jogar</string>
    <string name="dicas">Dicas</string>
    <string name="pontuacao">Pontuação</string>
    <string name="descImagemLogo">Logotipo KidsZone</string>
    <string name="username">Nome Usuário</string>
    <string name="password">Password</string>
    <string name="password_conf">Confirmar Password</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnEntrarFacebook">Entrar com o Facebook</string>
    <string name="perguntaRegisto">Ainda não tens a tua conta?</string>
    <string name="btnRegistar">Regista-te aqui!</string>
    <string name="text_dicas">Dicas</string>
    <string name="btnCatgIngles" type="id">Inglês</string>
    <string name="btnCatgPt" type="id">Português</string>
    <string name="btnCatgMat" type="id">Matemática</string>
    <string name="btnFacil" type="id">Fácil</string>
    <string name="btnMedio" type="id">Médio</string>
    <string name="btnDificil" type="id">Dificil</string>
    <string name="menuPrincipal" type="id">Menu Principal</string>
    <string name="title_activity_menu_user">MenuUser</string>
    <string name="descricao_dicas">Para descobrires as dicas que temos para te mostrar o teu dispositivo tens que agitar</string>
    <string name="btnAlterarPass">Alterar Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancelarConta">Eliminar conta </string>
    <string name="edDados">Editar Dados </string>
    <string name="descricaoPontuacao">A sua pontuação: </string>
    <string name="btnPontuacao">Ver as minhas pontuações </string>
    <string name="listaExplicacao">Seleciona um local e uma categoria.Vamos apresentar-te uma lista de locais do teu interesse</string>
    <string name="listar">Listar</string>
    <string name="categoria">Categoria</string>
    <string name="local">Local</string>


    <item name="error_login" type="id">Ocorreu um erro</item>
    <item name="cancel_login" type="id">Login cancelado</item>

    <string name="location">Location</string>
    <string name="amsterdam">Amsterdam</string>
    <string name="barcelona">Barcelona</string>
    <string name="berlin">Berlin</string>
    <string name="dubay">Dubai</string>
    <string name="london">London</string>
    <string name="paris">Paris</string>
    <string name="rome">Rome</string>
    <string name="tuscany">Tuscany</string>

    <string name="category">Category</string>
    <string name="accomodation">Acomodação</string>
    <string name="attraction">Atrações</string>
    <string name="restaurant">Restaurantes</string>
    <string name="poi">POI (pontos de interesse)</string>

    <string name="category_prompt">Choose a category</string>
    <string-array name="category_arrays">
        <item>accommodation</item>
        <item>poi</item>
        <item>attraction</item>
        <item>restaurant</item>
    </string-array>

    <string name="location_prompt">Choose a location</string>
    <string-array name="location_arrays">
        <item>Amsterdam</item>
        <item>Barcelona</item>
        <item>Berlin</item>
        <item>Dubai</item>
        <item>London</item>
        <item>Paris</item>
        <item>Rome</item>
        <item>Tuscany</item>
    </string-array>

</resources>
