<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ipp.estg.projeto_kidszone.Fragments.JogoCompDificFragment">


    <Button
        android:id="@+id/btnFacil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnFacil"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btnMedio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMedio"
        android:layout_marginTop="55dp"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btnDificil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDificil"
        android:layout_marginTop="95dp"
        android:layout_gravity="center"/>


</FrameLayout>
