<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ipp.estg.projeto_kidszone.Fragments.JogoCompetitivoFragment">



    <Button
        android:id="@+id/btnMat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCatgMat"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btnIngl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCatgIngles"
        android:layout_marginTop="55dp"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btnPt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCatgPt"
        android:layout_marginTop="95dp"
        android:layout_gravity="center"/>


</LinearLayout>


