<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarLogin"
        android:background="#D2B48C"
        android:text="Login"
        android:layout_height="0dp"
        android:layout_width="0dp">

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/logo"
        android:text="@string/descImagemLogo" />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:drawableLeft="@drawable/login_user"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:drawableLeft="@drawable/login_pass"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="185dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/btnEntrar"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="-55dp"
        android:text="OU" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="68dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/btnRegistar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-35dp"
        android:text="@string/btnRegistar"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/perguntaRegisto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-45dp"
        android:text="@string/perguntaRegisto" />

</LinearLayout>