<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/logo"
        android:text="@string/descImagemLogo" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:drawableLeft="@drawable/login_user"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:drawableLeft="@drawable/login_pass"
        android:hint="@string/password"
        android:inputType="textPassword" />


    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:drawableLeft="@drawable/login_pass"
        android:hint="@string/password_conf"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnCriarConta"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:text="Criar Registo"
        android:layout_marginTop="25dp"/>

</LinearLayout>