<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_vertical"
    android:orientation="vertical">


    <TextView
        android:id="@+id/nomeUsuario"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Nome usuário: " />

    <TextView
        android:id="@+id/nomeUsuarioEdit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/nomeUsuario"
        android:text="" />

    <Button
        android:id="@+id/btnAlterarPass"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/btnAlterarPass"
        android:layout_marginTop="-500dp"
        android:layout_marginLeft="5dp"/>

    <EditText
        android:id="@+id/editTextPasswordConta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:drawableLeft="@drawable/login_pass"
        android:hint="@string/password"
        android:inputType="textPassword" />


    <EditText
        android:id="@+id/editTextConfirmPasswordConta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:drawableLeft="@drawable/login_pass"
        android:hint="@string/password_conf"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/cancelarConta"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/cancelarConta"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="-150dp"
        android:textColor="@color/colorBlack"/>


</LinearLayout>