<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_vertical"
    android:orientation="vertical">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:layout_marginBottom="90dp"
        android:layout_marginTop="-25dp"
        android:background="@drawable/logo"
        android:text="@string/descImagemLogo" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnJogar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/gamer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginLeft="-68dp"
            android:layout_marginTop="60dp"
            android:text="@string/jogar"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <Button
            android:id="@+id/btnDicas"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="50dp"
            android:background="@drawable/ideias"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginLeft="-68dp"
            android:layout_marginTop="60dp"
            android:text="@string/dicas"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/mapa"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginLeft="-60dp"
            android:layout_marginTop="60dp"
            android:text="@string/mapa"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginLeft="-60dp"
            android:layout_marginTop="60dp"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />

    </LinearLayout>
</LinearLayout>