<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_activity"
    xmlns="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:titleTextColor="#ffffff">


            <TextView
                android:id="@+id/nome_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorBlack"
                android:textSize="15dp"
                android:layout_marginLeft="170dp"
                android:onClick="showPopup"/>


    </android.support.v7.widget.Toolbar>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="-68dp"
        android:layout_marginTop="60dp"
        android:text="@string/logout"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="-120dp"
        android:background="@drawable/logo"
        android:text="@string/descImagemLogo" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnJogar"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="85dp"
            android:background="@drawable/game" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="-68dp"
            android:layout_marginTop="60dp"
            android:text="@string/jogar"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <Button
            android:id="@+id/btnDicas"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="55dp"
            android:background="@drawable/tips"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="-68dp"
            android:layout_marginTop="60dp"
            android:text="@string/dicas"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />


    </LinearLayout>
</LinearLayout>